syntax = "proto3";

package api.console.administration;

option go_package = "github.com/omalloc/kratos-admin/api/console/administration;administration";
option java_multiple_files = true;
option java_package = "api.console.administration";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protobuf/pagination.proto";
import "console/administration/role.proto";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {
		option (google.api.http) = {
			post: "/api/console/user"
			body: "*"
		};
	};
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply) {
		option (google.api.http) = {
			put: "/api/console/user/{uid}"
			body: "*"
		};
	};
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply) {
		option (google.api.http).delete = "/api/console/user/{uid}";
	}
	rpc GetUser (GetUserRequest) returns (GetUserReply) {
		option (google.api.http).get = "/api/console/user/{uid}";
	}
	rpc ListUser (ListUserRequest) returns (ListUserReply) {
		option (google.api.http).get = "/api/console/user";
	}

	rpc BindRole (BindRoleRequest) returns (BindRoleReply) {
		option (google.api.http) = {
			post: "/api/console/user/{uid}/role"
			body: "*"
		};
	}
	rpc UnbindRole (UnbindRoleRequest) returns (UnbindRoleReply) {
		option (google.api.http) = {
			delete: "/api/console/user/{uid}/role/{role_id}"
		};
	}
}

enum UserStatus {
	// 未定义
	UNKNOWN = 0;
	// 正常
	NORMAL = 1;
	// 禁用
	DISABLED = 2;
	// 删除
	DELETED = 3;
}

message UserInfo {
	int64 uid = 1;
	string username = 2;
	string email = 3;
	string nickname = 4;
	string avatar = 5;
	UserStatus status = 6;
	google.protobuf.Timestamp created_at = 7;
	google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp last_login = 9;
	repeated int64 role_ids = 10;
}

message CreateUserRequest {
	string username = 1;
	string nickname = 2;
	string email = 3;
	string password = 4;
	string re_password = 5;
  UserStatus status = 6;
	repeated string role_ids = 7;
}

message CreateUserReply {
	int64 uid = 1;
}

message UpdateUserRequest {
	int64 uid = 1;
	string email = 2;
	string username = 3;
	string nickname = 4;
	string password = 5;
	string re_password = 6;
	UserStatus status = 7;
	repeated string role_ids = 8;
}
message UpdateUserReply {}

message DeleteUserRequest {
	int64 uid = 1;
}
message DeleteUserReply {}

message GetUserRequest {
	int64 uid = 1;
}
message GetUserReply {
	UserInfo user = 1;
	repeated RoleInfo roles = 2;
}

message ListUserRequest {
	protobuf.Pagination pagination = 1;
  UserStatus status = 2;
  string username = 3;
  string email = 4;
}
message ListUserReply {
	protobuf.Pagination pagination = 1;
	repeated UserInfo data = 2;
}

message BindRoleRequest {
	int64 uid = 1;
	int64 role_id = 2;
}
message BindRoleReply {}

message UnbindRoleRequest {
	int64 uid = 1;
	int64 role_id = 2;
}
message UnbindRoleReply {}
